--- a/index.html
+++ b/index.html
@@ -177,67 +177,67 @@
       <div class="two-slider__slider">
         <div class="two-slider__slider-item">
           <img src="img/slider-img-1.jpg" class="two-slider__item-img" alt="">
-          <div class="two-slider__inner">
+          <a href='#' class="two-slider__inner">
             <img src="img/slider-icon.svg" alt="icon" class="two-slider__inner-icon">
             <span class="two-slider__inner-text">Cladding</span>
-            <a class="two-slider__inner-link" href="#">More</a>
-          </div>
+            <span class="two-slider__inner-link" href="#">More</span>
+          </a>
         </div>
         <div class="two-slider__slider-item">
           <img src="img/slider-img-2.png" class="two-slider__item-img" alt="">
-          <div class="two-slider__inner">
+          <a href='#' class="two-slider__inner">
             <img src="img/slider-icon.svg" alt="icon" class="two-slider__inner-icon">
             <span class="two-slider__inner-text">Cladding</span>
-            <a class="two-slider__inner-link" href="#">More</a>
-          </div>
+            <span class="two-slider__inner-link" href="#">More</span>
+          </a>
         </div>
         <div class="two-slider__slider-item">
           <img src="img/slider-img-3.jpg" class="two-slider__item-img" alt="">
-          <div class="two-slider__inner">
+          <a href='#' class="two-slider__inner">
             <img src="img/slider-icon.svg" alt="icon" class="two-slider__inner-icon">
             <span class="two-slider__inner-text">Cladding</span>
-            <a class="two-slider__inner-link" href="#">More</a>
-          </div>
+            <span class="two-slider__inner-link" href="#">More</span>
+          </a>
         </div>
         <div class="two-slider__slider-item">
           <img src="img/slider-img-1.jpg" class="two-slider__item-img" alt="">
-          <div class="two-slider__inner">
+          <a href='#' class="two-slider__inner">
             <img src="img/slider-icon.svg" alt="icon" class="two-slider__inner-icon">
             <span class="two-slider__inner-text">Cladding</span>
-            <a class="two-slider__inner-link" href="#">More</a>
-          </div>
+            <span class="two-slider__inner-link" href="#">More</span>
+          </a>
         </div>
         <div class="two-slider__slider-item">
           <img src="img/slider-img-3.jpg" class="two-slider__item-img" alt="">
-          <div class="two-slider__inner">
+          <a href='#' class="two-slider__inner">
             <img src="img/slider-icon.svg" alt="icon" class="two-slider__inner-icon">
             <span class="two-slider__inner-text">Cladding</span>
-            <a class="two-slider__inner-link" href="#">More</a>
-          </div>
+            <span class="two-slider__inner-link" href="#">More</span>
+          </a>
         </div>
         <div class="two-slider__slider-item">
           <img src="img/slider-img-3.jpg" class="two-slider__item-img" alt="">
-          <div class="two-slider__inner">
+          <a href='#' class="two-slider__inner">
             <img src="img/slider-icon.svg" alt="icon" class="two-slider__inner-icon">
             <span class="two-slider__inner-text">Cladding</span>
-            <a class="two-slider__inner-link" href="#">More</a>
-          </div>
+            <span class="two-slider__inner-link" href="#">More</span>
+          </a>
         </div>
         <div class="two-slider__slider-item">
           <img src="img/slider-img-3.jpg" class="two-slider__item-img" alt="">
-          <div class="two-slider__inner">
+          <a href='#' class="two-slider__inner">
             <img src="img/slider-icon.svg" alt="icon" class="two-slider__inner-icon">
             <span class="two-slider__inner-text">Cladding</span>
-            <a class="two-slider__inner-link" href="#">More</a>
-          </div>
+            <span class="two-slider__inner-link" href="#">More</span>
+          </a>
         </div>
         <div class="two-slider__slider-item">
           <img src="img/slider-img-1.jpg" class="two-slider__item-img" alt="">
-          <div class="two-slider__inner">
+          <a href='#' class="two-slider__inner">
             <img src="img/slider-icon.svg" alt="icon" class="two-slider__inner-icon">
             <span class="two-slider__inner-text">Cladding</span>
-            <a class="two-slider__inner-link" href="#">More</a>
-          </div>
+            <span class="two-slider__inner-link" href="#">More</span>
+          </a>
         </div>
       </div>
 
@@ -282,7 +282,7 @@
               </p>
               <div class="cross__brand-cont">
                 <div class="cross__brand-cyrcle">
-                  <img src="img/brand-1.png" alt="brand" class="cross__brand">
+                  <img src="img/brand-2.png" alt="brand" class="cross__brand">
                 </div>
                 <div class="cross__brand-texts">
                   <p class="cross__brand-name">Brand Name</p>
@@ -298,7 +298,7 @@
               </p>
               <div class="cross__brand-cont">
                 <div class="cross__brand-cyrcle">
-                  <img src="img/brand-1.png" alt="brand" class="cross__brand">
+                  <img src="img/brand-3.png" alt="brand" class="cross__brand">
                 </div>
                 <div class="cross__brand-texts">
                   <p class="cross__brand-name">Brand Name</p>
@@ -314,7 +314,7 @@
             </p>
             <div class="cross__brand-cont">
               <div class="cross__brand-cyrcle">
-                <img src="img/brand-1.png" alt="brand" class="cross__brand">
+                <img src="img/brand-4.png" alt="brand" class="cross__brand">
               </div>
               <div class="cross__brand-texts">
                 <p class="cross__brand-name">Bam</p>
