--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     <div class="we-offer-bg--black">
       <section class="we-offer my-container">
         <p class="we-offer__pre-title standart-pre-title ">WE OFFER</p>
-        <h3 class="we-offer__title standart-title">What We can Do For You</h3>
+        <h3 class="we-offer__title standart-title">What we can do for you</h3>
         <div class="we-offer__items">
           <div class="we-offer__item">
             <img src="img/we-offer-1.svg" alt="icon" class="we-offer__icon">
