--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
   <!-- style -->
+  <link rel="stylesheet" href="css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="css/style.min.css">
   <!-- slick style -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.css" rel="stylesheet" />
@@ -199,7 +200,7 @@
             <span class="two-slider__inner-link" href="#">More</span>
           </a>
         </div>
-        <div class="two-slider__slider-item">
+        <!-- <div class="two-slider__slider-item">
           <img src="img/slider-img-1.jpg" class="two-slider__item-img" alt="">
           <a href='#' class="two-slider__inner">
             <img src="img/slider-icon.svg" alt="icon" class="two-slider__inner-icon">
@@ -238,7 +239,7 @@
             <span class="two-slider__inner-text">Cladding</span>
             <span class="two-slider__inner-link" href="#">More</span>
           </a>
-        </div>
+        </div> -->
       </div>
 
       <div class="two-slider__bottom my-container">
@@ -325,12 +326,71 @@
         </div>
       </section>
     </div>
+
+    <section class="contactus contactus_expertise">
+      <div class="container">
+          <p class="pagesubtitle">CONTACT US</p>
+          <h1 class="white">Get in touch with us</h1>
+          <div class="continfosect">
+              <div class="continfobox">
+                  <p class="title">Location</p>
+                  <p class="descr">16 Blyry Court, Blyry Business Park, Athlone, Co Westmeath, N37 CY58.</p>
+              </div>
+              <div class="continfobox">
+                  <p class="title">E-mail</p>
+                  <a class="descr" href="mailto:company_emaill@lorem.com">company_emaill@lorem.com</a>
+              </div>
+              <div class="continfobox">
+                  <p class="title">Phone number</p>
+                  <a class="descr" href="tel:353871325319">+353 87 132 5319</a>
+              </div>
+          </div>
+          <div class="contform-wrapper">
+              <form action="">
+                  <p class="title">
+                      We are ready to lead you into the exciting world of stonemasonry, stone works and
+                      restoration works.
+                  </p>
+                  <div class="row">
+                      <div class="col-md-4">
+                          <input type="text" placeholder="Your name *">
+                      </div>
+                      <div class="col-md-4">
+                          <input type="email" placeholder="E-mail *">
+                      </div>
+                      <div class="col-md-4">
+                          <input type="tel" placeholder="Phone number">
+                      </div>
+                      <div class="col-12">
+                          <textarea name="" id="" cols="30" rows="10" placeholder="Your message"></textarea>
+                          <button type="submit" class="submitbtn">
+                              <svg width="6" height="13" viewBox="0 0 6 13" fill="none"
+                                  xmlns="http://www.w3.org/2000/svg">
+                                  <path d="M6 6.5L0.749999 12.9952L0.75 0.00480915L6 6.5Z" fill="#B7A179" />
+                              </svg>
+                              Send a message
+                          </button>
+                      </div>
+
+                  </div>
+              </form>
+          </div>
+
+      </div>
+  </section>
   </main>
 
+
+  <footer class="footer">
+    <div class="container">
+        <p>Master Stonemasons 2021. All rights reserved.</p>
+    </div>
+</footer>
   <!-- jquery and slick -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.5.9/slick.min.js"></script>
   <!-- main js -->
+  <script src="js/common.js"></script>
   <script src="js/main.js"></script>
   <script src="js/plugins-config.js"></script>
 
