--- a/about-us.html
+++ b/about-us.html
@@ -110,43 +110,13 @@ We have a proven track record in Ireland and the UK, having completed large-scal
         </div>
       </div>
       <div class="two-slider__slider-item">
-        <img src="img/slider-img-2.png" class="two-slider__item-img" alt="">
+        <img src="img/about-us-1.jpg" class="two-slider__item-img" alt="">
         <div class="two-slider__inner">
           <span class="two-slider__inner-text">Cladding</span>
         </div>
       </div>
       <div class="two-slider__slider-item">
         <img src="img/slider-img-3.jpg" class="two-slider__item-img" alt="">
-        <div class="two-slider__inner">
-          <span class="two-slider__inner-text">Cladding</span>
-        </div>
-      </div>
-      <div class="two-slider__slider-item">
-        <img src="img/slider-img-1.jpg" class="two-slider__item-img" alt="">
-        <div class="two-slider__inner">
-          <span class="two-slider__inner-text">Cladding</span>
-        </div>
-      </div>
-      <div class="two-slider__slider-item">
-        <img src="img/slider-img-3.jpg" class="two-slider__item-img" alt="">
-        <div class="two-slider__inner">
-          <span class="two-slider__inner-text">Cladding</span>
-        </div>
-      </div>
-      <div class="two-slider__slider-item">
-        <img src="img/slider-img-3.jpg" class="two-slider__item-img" alt="">
-        <div class="two-slider__inner">
-          <span class="two-slider__inner-text">Cladding</span>
-        </div>
-      </div>
-      <div class="two-slider__slider-item">
-        <img src="img/slider-img-3.jpg" class="two-slider__item-img" alt="">
-        <div class="two-slider__inner">
-          <span class="two-slider__inner-text">Cladding</span>
-        </div>
-      </div>
-      <div class="two-slider__slider-item">
-        <img src="img/slider-img-1.jpg" class="two-slider__item-img" alt="">
         <div class="two-slider__inner">
           <span class="two-slider__inner-text">Cladding</span>
         </div>
