--- a/index.html
+++ b/index.html
@@ -179,8 +179,8 @@
         <div class="two-slider__slider-item">
           <img src="img/slider-img-2.png" class="two-slider__item-img" alt="">
           <a href='#' class="two-slider__inner">
-            <img src="img/slider-icon.svg" alt="icon" class="two-slider__inner-icon">
-            <span class="two-slider__inner-text">Cladding</span>
+            <img src="img/slider-icon-2.svg" alt="icon" class="two-slider__inner-icon">
+            <span class="two-slider__inner-text">Restoration</span>
             <span class="two-slider__inner-link" href="#">More</span>
           </a>
         </div>
@@ -195,8 +195,8 @@
         <div class="two-slider__slider-item">
           <img src="img/slider-img-3.jpg" class="two-slider__item-img" alt="">
           <a href='#' class="two-slider__inner">
-            <img src="img/slider-icon.svg" alt="icon" class="two-slider__inner-icon">
-            <span class="two-slider__inner-text">Cladding</span>
+            <img src="img/slider-icon-1.svg" alt="icon" class="two-slider__inner-icon">
+            <span class="two-slider__inner-text">Masonry</span>
             <span class="two-slider__inner-link" href="#">More</span>
           </a>
         </div>
