--- a/about-us.html
+++ b/about-us.html
@@ -104,21 +104,21 @@ We have a proven track record in Ireland and the UK, having completed large-scal
 
     <div class="two-slider__slider">
       <div class="two-slider__slider-item">
-        <img src="img/slider-img-1.jpg" class="two-slider__item-img" alt="">
+        <img src="img/about-slider-1.jpg" class="two-slider__item-img" alt="">
         <div class="two-slider__inner">
-          <span class="two-slider__inner-text">Cladding</span>
+          <span class="two-slider__inner-text">Our team</span>
         </div>
       </div>
       <div class="two-slider__slider-item">
         <img src="img/about-us-1.jpg" class="two-slider__item-img" alt="">
         <div class="two-slider__inner">
-          <span class="two-slider__inner-text">Cladding</span>
+          <span class="two-slider__inner-text">Our team</span>
         </div>
       </div>
       <div class="two-slider__slider-item">
-        <img src="img/slider-img-3.jpg" class="two-slider__item-img" alt="">
+        <img src="img/about-slider-2.jpg" class="two-slider__item-img" alt="">
         <div class="two-slider__inner">
-          <span class="two-slider__inner-text">Cladding</span>
+          <span class="two-slider__inner-text">Our team</span>
         </div>
       </div>
     </div>
